--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -27,6 +27,7 @@
                 <td><a href="/edit_article/{{ article.id }}" class="btn btn-info float-right">Edit</a></td>
                 <td>
                     <form action="{{ url_for('blog.delete_article', id=article.id) }}" method="post">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <input type="submit" value="Delete" class="btn btn-danger">
                     </form>
                 </td>
