--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,6 +9,7 @@
         <div class="col-6 offset-md-3">
             <h1>Login</h1>
             <form action="" method="POST">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="form-group">
                     <label>Username</label>
                     <input type="text" name="username" class="form-control" value="{{ request.form.username }}">
