--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,6 +12,7 @@
             <h1>Registration</h1>
             {% from 'includes/_formtemplates.html' import render_field %}
             <form class="mt-5" action="" method="post">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="form-group">
                     {{ render_field(form.name, class_='form-control') }}
                 </div>
